Remove "OS update successful." notification.

We have been showing the notification after successful ext4
migration. This notification is getting less useful since most
users have already migrated to ext4, and we hear several feedback
reports that the notification was shown at unexpected timing.

Let's remove the notification as a simple fix and a clean-up.
(Removing the notification was approved by PM.)

Bug: 894707
Test: Manually confirmed that the notification was not shown after migration on Kevin.
Change-Id: Ide3237a57a127974eed6f1619fc5e096f911f72a
Reviewed-on: https://chromium-review.googlesource.com/c/1278666
Commit-Queue: Naoki Fukino <fukino@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Yusuke Sato <yusukes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#599568}
Former-commit-id: b671af6d8b890524426dbed9609f694c8a6f16c8